!16 完成 - 后台 - 挂号微服务 （register-service）& 新增 - 用户登录 * Merge branch '#I3VV4F' of https://gitee.com/hemiao3000/woniu-16-4-grou… * 完成 - 后台 - 挂号微服务 （register-service）& 新增 - 用户登录 - 刘小雨 * Merge branch 'master' of https://gitee.com/hemiao3000/woniu-16-4-group… * 之前不小心删除了日志配置，已还原 * 新增 - 发送手机号 => RabbitMQ - 刘小雨 * 创建了挂号微服务的Dao接口、Dao的Po对象，测试了没有问题 * 新建 - 后端 - 挂号微服务 （register-service）- 刘小雨

--- a/vue-frontstage/index.html
+++ b/vue-frontstage/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./static/logo.ico" />
+    <script src="./static/config.js"></script>
     <title>蜗牛网上预约挂号</title>
   </head>
   <body>
